<?xml version="1.0"?>
<package format="2">
  <name>dyret_hardware</name>
  <version>0.2.0</version>
  <description>The dyret_hardware package</description>

  <maintainer email="tonnesfn@ifi.uio.no">tonnesfn</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>dyret_common</build_depend> 
  <build_depend>message_generation</build_depend> 
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>mocap_optitrack</exec_depend>
  <exec_depend>optoforce</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>xsens_driver</exec_depend>

  <export>
  </export>
</package>
